fix: delegator value defaults

--- a/public/index.html
+++ b/public/index.html
@@ -877,6 +877,8 @@
             } else {
               updateState("delegatorZec", DEFAULTS.delegatorZec);
             }
+          } else {
+            updateState("delegatorZec", DEFAULTS.delegatorZec);
           }
 
           const advParam = params.get("adv");
