--- a/public/index.html
+++ b/public/index.html
@@ -81,18 +81,37 @@
         font-size: 1.5rem;
         line-height: 1.6;
       }
-      .summary-share {
-        margin-top: 0.75rem;
+      .page-header-actions {
+        flex: 0 0 auto;
+        margin-left: auto;
+        display: flex;
+        align-items: flex-start;
       }
-      .summary-share button {
+      .page-header-actions button {
         white-space: nowrap;
         font-size: 0.95rem;
       }
       .simulator-disclaimer {
         margin: 1.25rem 0 0;
-        font-size: 0.92rem;
+        padding-top: 0.25rem;
         color: var(--muted);
-        line-height: 1.4;
+        line-height: 1.45;
+      }
+      .simulator-disclaimer h3 {
+        margin: 0 0 0.35rem;
+        font-size: 0.85rem;
+        font-weight: 600;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+      }
+      .simulator-disclaimer ul {
+        margin: 0;
+        padding-left: 1.1rem;
+        display: grid;
+        gap: 0.25rem;
+      }
+      .simulator-disclaimer li {
+        font-size: 0.85rem;
       }
       form.controls {
         display: grid;
@@ -303,6 +322,9 @@
           <h1>Crosslink Economics Simulator</h1>
           <p>The Crosslink v1 economics, demonstrated simply.</p>
         </div>
+        <div class="page-header-actions">
+          <button type="button" id="copy-link-button">🔗 Share scenario</button>
+        </div>
       </header>
 
       <div class="panel-intro">
@@ -318,14 +340,15 @@
               <li>or about <span id="sumAnnualizedPct" class="accent summary-strong"></span>% annualized.</li>
             </ul>
           </p>
-          <div class="summary-share">
-            <button type="button" id="copy-link-button">🔗 Share scenario</button>
+          <div class="simulator-disclaimer">
+            <h3>Disclaimers</h3>
+            <ul>
+              <li>Illustrative estimates only; not financial or legal advice. Results may vary.</li>
+              <li>Funds come from Orchard; amounts and finalizer choice stay public for weight transparency.</li>
+            </ul>
           </div>
-          <p class="simulator-disclaimer">
-            This simulator provides illustrative estimates only. It is not investment, financial, or legal advice, and real-world outcomes may differ.
-          </p>
           <div class="simulator-footer">
-            <span>Simulator version 1.2</span>
+            <span>Simulator version 1.3</span>
           </div>
         </div>
         <div style="display: none">
